Translation of MA 77 added and other misc corrections.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_076.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_076.md
@@ -4,6 +4,7 @@ title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 76. [Ugracelā]'
 type: kramdown
 base: ../../../
 previous: MA_075.html
+next: MA_077.html
 ---
 
 # [The Medium Discourses](../../index.html)
