Tweaked spacing of banner elements.

--- a/02_madhyama/01_First/01_Sevens/MA_007.md
+++ b/02_madhyama/01_First/01_Sevens/MA_007.md
@@ -15,7 +15,7 @@ At the time, the Venerable Mahācunda rose from his seat of repose late in the a
 
 The Bhagavān told him, “It’s possible, Cunda. [428a] There are seven worldly merits that obtain great fortune, great rewards, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who give monasteries and meeting halls to the assembly of monks. This, Cunda, is the first worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
 
-“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give them seats, carpets, blankets, mattresses, and bedding supplies.[\[2\]](#n2){#:ref2} This, Cunda, is the second worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
+“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give them seats, carpets, blankets, mattresses, and bedding supplies.[\[2\]](#n2){:#ref2} This, Cunda, is the second worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
 
 “Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give everyone new, clean, and marvelous clothing. This, Cunda, is the third worldly merit that obtains great fortune, great rewards, great renown, and great virtue.
 
